--- a/assets/css/myStyle.css
+++ b/assets/css/myStyle.css
@@ -88,6 +88,9 @@ h1, th {
 	text-align: center;
 	vertical-align: middle !important;
 }
+table.table-bordered.dataTable th:last-child, table.table-bordered.dataTable th:last-child, table.table-bordered.dataTable td:last-child, table.table-bordered.dataTable td:last-child {
+    border-right-width: 1px !important;
+}
 /* size kecil */
 @media only screen and (max-width: 700px) {
 	.home {
